# autohw

./: .env  .env.server  .gitignore  Cargo.toml  Rocket.toml  TODO
migrations/2020-09-19-102605_ini/: down.sql  up.sql
migrations/2020-09-25-044150_day_weights/: down.sql  up.sql
migrations/2020-09-27-142019_hw_weights/: down.sql  up.sql
migrations/2020-09-27-211350_last_repeat_reset/: down.sql  up.sql
migrations/2020-10-01-191109_blackboard/: down.sql  up.sql
src/: auth_guard.rs  handlebars_helpers.rs  main.rs  pub_imports.rs  schema.rs  wrapper_types.rs
src/actions/: class.rs  homework.rs  user.rs
src/endpoints/: mod.rs
src/endpoints/api/: class.rs  homework.rs  mod.rs  user.rs
src/models/: class.rs  homework.rs  hw_progress.rs  mod.rs  user.rs
static/: site.webmanifest
static/lib/js/: literallycanvas-core.min.js
templates/: add_homework.hbs  blackboard.hbs  index.hbs  layout.hbs  login.hbs  nav.hbs  past_due.hbs  settings.hbs
